# KBUI

./: .gitmodules  CMakeLists.txt
src/: main.cpp
src/private/headers/Fonts/: Font.h
src/private/source/: MainWindow.cpp  VulkanWindow.cpp  WindowWithoutBorders.cpp  main.cpp
src/private/source/Fonts/: Font.cpp  FontManager.cpp
src/private/source/Menus/: MainMenuBar.cpp  MenuItem.cpp
src/private/source/Theme/: ThemeManager.cpp
src/private/source/Windows/: AWindow.cpp  Window.cpp  WindowManager.cpp
src/private/source/Windows/Logs/: LogWindow.cpp
src/private/source/Windows/Terminal/: TerminalWindow.cpp
src/public/headers/: ImVecMath.h  MainWindow.cpp  MainWindow.h  VulkanWindow.h  WindowWithoutBorders.cpp  WindowWithoutBorders.h
src/public/headers/Fonts/: FontManager.h
src/public/headers/Menus/: MainMenuBar.h  MenuItem.h
src/public/headers/Properties/: WindowProperties.h
src/public/headers/Theme/: ThemeManager.h
src/public/headers/Windows/: AWindow.h  Window.h  WindowManager.h
src/public/headers/Windows/Logs/: LogWindow.h
src/public/headers/Windows/Terminal/: TerminalWindow.h
